[gd_scene load_steps=6 format=3 uid="uid://r2skr0dfb14f"]

[ext_resource type="Script" path="res://scripts/fridge.gd" id="1_xlkk8"]
[ext_resource type="Texture2D" uid="uid://bpyh1fuma6oqy" path="res://images/fridge.png" id="2_6w6jn"]
[ext_resource type="Texture2D" uid="uid://dgm5j2o6fueed" path="res://images/fridge_top.png" id="3_6xfd0"]
[ext_resource type="Texture2D" uid="uid://bn10ts4oy204c" path="res://images/back.png" id="3_idri5"]
[ext_resource type="Texture2D" uid="uid://crqu7mbvhk7qo" path="res://images/back_hover.png" id="4_cewm3"]

[node name="Fridge" type="Node2D"]
script = ExtResource("1_xlkk8")

[node name="Fridge" type="Sprite2D" parent="."]
position = Vector2(320, 496)
scale = Vector2(1.6, 1.6)
texture = ExtResource("2_6w6jn")

[node name="FridgeTop" type="Sprite2D" parent="."]
position = Vector2(328, 40)
scale = Vector2(2.2195, 0.719544)
texture = ExtResource("3_6xfd0")

[node name="BackButton" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 16.0
offset_right = 520.0
offset_bottom = 528.0
scale = Vector2(0.15, 0.15)
button_mask = 7
texture_normal = ExtResource("3_idri5")
texture_pressed = ExtResource("4_cewm3")
texture_hover = ExtResource("4_cewm3")
texture_disabled = ExtResource("3_idri5")
texture_focused = ExtResource("4_cewm3")

[node name="ProductsScroll" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(10, 728)
offset_left = 8.0
offset_top = 104.0
offset_right = 648.0
offset_bottom = 424.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="FridgeBox" type="VBoxContainer" parent="ProductsScroll"]
layout_mode = 2

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
